# compiler

./: .gitignore  CMakeLists.txt  README.md  alif.cpp  aliflib  examples  makefile  إعداد-للتطوير  إعداد_للتطوير  إعداد_للتطوير.py
.github/workflows/: build-test.yml  cmake.yml  push2main.yml  release.yml  بناء-واختبارات.yml
.خطافات-جيب/: pre-commit
.خطافات_جيب/: pre-commit
.خطافات_جيت/: pre-commit
Doc/: alif_standard_051622.docx  alif_standard_051622.odt  alif_standard_051722.docx
alif_standards/: README.md  انشاء_ملف_اقرأني.py
alif_standards/المعايير/: 051622.md  052322.md  062622.md
alif_standards/مواضيع المعايير/: مواضيع_المعايير.md
aliflib/: alifcore.cc  alifstandardlib.alif  التشفير.alif  الخوارزميات.alif  الرياضيات.alif  الملفات.alif  النظام.alif  الواجهة.alif  الواجهةs.alif  الوقت.alif
compile/: compile.cpp  linux.cpp  macos.cpp  win32.cpp
core/: core.cpp
examples/: helloworld.alif  ui.html  webui.alif  win.html
general/: global.cpp  headers.hpp  log.cpp  setup.cpp
generator/: generator.cpp  pc_console.cpp  pc_gui.cpp  phone_android.cpp
lexer/: alif_lexer.cpp
manual_test/: alif_var.cpp  alif_var_2.cpp
parser/: alif_parser.cpp  alif_parser_bool.cpp  alif_parser_class.cpp  alif_parser_control.cpp  alif_parser_end.cpp  alif_parser_function.cpp  alif_parser_function_call.cpp  alif_parser_function_class.cpp  alif_parser_if.cpp  alif_parser_if_else.cpp  alif_parser_int.cpp  alif_parser_loop.cpp  alif_parser_next_break.cpp  alif_parser_obj.cpp  alif_parser_obj_new.cpp  alif_parser_operator.cpp  alif_parser_return.cpp  alif_parser_string.cpp  alif_parser_var.cpp  alif_parser_var_g.cpp  alif_parser_var_g_class.cpp  alif_parser_window.cpp
src/: CMakeLists.txt  alif.cpp  alif_bool.hpp  alif_class.hpp  alif_compile.hpp  alif_control.hpp  alif_core.hpp  alif_end.hpp  alif_function.hpp  alif_function_call.hpp  alif_function_class.hpp  alif_if.hpp  alif_if_else.hpp  alif_int.hpp  alif_loop.hpp  alif_macro.hpp  alif_namespace.hpp  alif_next_break.hpp  alif_obj.hpp  alif_obj_new.hpp  alif_operator.hpp  alif_return.hpp  alif_string.hpp  alif_var.hpp  alif_var_g.hpp  alif_var_g_class.hpp  alif_window.hpp
src/aliflib/: alifcore.cc  alifstandardlib.alif  webui.hpp  الرياضيات.alif
src/aliflib/utf8/: checked.h  core.h  unchecked.h
src/examples/: ui.html
src/utf8/: checked.h  core.h  unchecked.h
system/alifcore/: alifcore.cc
اختبارات/: إجراء_الاختبارات.py  اجراء_الاختبارات  اختبر  توقع.json  قالب_التوقع.yml  قالب_توقع.json  متطلبات  مساعدات.py
اختبارات/أكواد/الإدخال/: ادخل_رقما.alif  ادخل_رقما_توقع.json  ادخل_رقما_توقع.yml
اختبارات/أكواد/دالة_رئيسية/: أساسي.alif  أساسي_توقع.json  أساسي_توقع.yml
اختبارات/أكواد/طباعة/: اطبع.alif  اطبع_توقع.json  اطبع_توقع.yml
اختبارات/أكواد/كلما/: اصغر.alif  اصغر_توقع.json  اصغر_توقع.yml  اكبر.alif  اكبر_توقع.json  اكبر_توقع.yml
اختبارات/أكواد/مكتبات/: الرياضيات.alif  الرياضيات_توقع.json  الرياضيات_توقع.yml
الوثائق/: README.md
الوثائق/المعايير/051622/: 051622.md
